# diagnostics

./: CMakeLists.txt  diagnostics.hpp
ccov/: CMakeLists.txt
ccov/config/: routes.cpp
ccov/include/: ccov.hpp
ccov/include/controllers/: application_controller.hpp
ccov/src/controllers/: application_controller.cpp
include/: basic_debugger.hpp  diagnostics.hpp
src/: basic_debugger.cpp
